fixed the boxes in main and fixed alignment of main

--- a/resources/index.css
+++ b/resources/index.css
@@ -84,25 +84,28 @@ button {
   margin-bottom: 5%;
 }
 #main-container {
+  padding: 0% 15%;
   display: flex;
-  justify-content: space-around;
-  padding: 0 15%;
+  justify-content: center;
+  gap: 20px;
+}
+#empty-box {
+  border: 2px solid #3882f6;
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
 }
 #main h2 {
   display: flex;
   justify-content: center;
+  padding: 30px;
 }
 
-#empty-box {
-  border: 2px solid #3882f6;
-  width: 200px;
-  height: 200px;
-  border-radius: 10px;
-}
 #main-container p {
   display: flex;
   flex-direction: column;
-  max-width: 100px;
+  justify-content: center;
+  max-width: 150px;
   text-align: center;
 }
 
